syntax = "proto3";

package database;

import "google/protobuf/empty.proto";

option go_package = "proto/databasepb";

service DatabaseService {
  rpc Register (CreateNewUserRequest) returns (AuthResponse);
  rpc Login (LoginUserRequest) returns (AuthResponse);
  rpc UpdatePassword (UpdatePasswordRequest) returns (BaseResultResponse);

  rpc Ping (google.protobuf.Empty) returns (BaseResultResponse);
}

// Requests
message CreateNewUserRequest {
  string nickname = 1;
  string email = 2;
  string password = 3;
}

message LoginUserRequest {
  oneof login_method {
    string username = 1;
    string email = 2;
  }
  string password = 3;
}

message UpdatePasswordRequest {
  string email = 1;
  string password = 2;
}

// Responses
message BaseResultResponse {
  string result = 1;
}

message AuthResponse {
  string userId = 1;
  string result = 2;
}